--- a/SE137/w4/style.css
+++ b/SE137/w4/style.css
@@ -40,28 +40,34 @@ h1{
     display: grid;
     grid-template-areas: 
     "br br br br rt"
-    "bl bl bm bm rt";
+    "bl bl bm bm rt"
+    "ft ft ft ft ft";
     row-gap: 20px;
     column-gap: 20px;
-    grid-template-rows: 50% 50%;
-    grid-template-columns: 20% 20% 20% 20% 16%;
+
+    grid-template-columns: 19% 19% 19% 19% 19%;
 }
 
 #banner {
     grid-area: br;
     background-image: url("images/banner.png") ;
     background-repeat: no-repeat;
-    background-size: 100%;
-    height: 100%;
+    background-size: cover;
+    border: 5px solid red;
+    min-height: 388px;
+    max-height: 1200px;
     
 }
 
 #bleft{
     grid-area: bl;
+    border-top: 5px solid red;
+
 }
 #poster{
-    height: 80%;
-    width: 80%;
+    
+    max-height: 478px;
+    max-width: 310px;
     
 }
 
@@ -74,6 +80,8 @@ h1{
 
 #bmid{
     grid-area: bm;
+    border-top: 5px solid red;
+
 }
 
 #pennant{
@@ -85,6 +93,7 @@ h1{
 
 #right{
     grid-area: rt;
+    border: 5px solid red;
 }
 
 #sign{
@@ -99,5 +108,11 @@ h1{
     width: auto;
     max-width: 300px;
     max-height: 300px;
+}
+
+#footer{
+    grid-area: ft;
+    background-color: black;
+    color: white;
 }
 
